Update Language section

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <div class="category-card">
             <h3>Languages</h3>
             <ul>
-              <li>German (A1)</li>
+              <li>Basic German</li>
             </ul>
           </div>
         </div>
